fix add-address layout bug

--- a/sass/modules/_toolbar.sass
+++ b/sass/modules/_toolbar.sass
@@ -181,6 +181,9 @@
   .locality, #id_notes
     display: block
 
+  #id_notes
+    clear: both
+
 #export-address-form, #import-address-form
   +leader(1)
   label
