--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -442,6 +442,7 @@ h1 a:focus, h1 a:hover, h1 a:active { color: #984400; }
 #add-address-form .complex { display: inline; float: left; width: 79.592%; margin-right: 2.041%; }
 #add-address-form .complex, #add-address-form .street-suffix { display: inline; float: right; margin-right: 0; #margin-left: -0.809em; }
 #add-address-form .locality, #add-address-form #id_notes { display: block; }
+#add-address-form #id_notes { clear: both; }
 
 #export-address-form, #import-address-form { margin-top: 1.618em; }
 #export-address-form label, #import-address-form label { display: block; }
